fix icons spacing in header and and linking to the hero banner in mobile

--- a/src/components/Common/Header/style.module.css
+++ b/src/components/Common/Header/style.module.css
@@ -38,13 +38,13 @@
   @apply ml-2;
 } */
 .header_favorite {
-  @apply flex lg:mr-8 mobile:w-6 mobile:h-6 h-4 w-4 cursor-pointer;
+  @apply flex lg:mr-8 mr-4 mobile:w-6 mobile:h-6 h-4 w-4 cursor-pointer;
 }
 .header_shopping_card {
   @apply flex lg:mr-8 mobile:w-6 mobile:h-6 h-4 w-4 cursor-pointer;
 }
 .cart_badge {
-  @apply absolute top-[-6px] left-2 lg:left-4 w-4 h-4 lg:w-5 lg:h-5 flex justify-center items-center rounded-[50%] bg-[#3e688e] text-10 lg:text-12 text-fff leading-5 text-center;
+  @apply absolute top-[-6px] left-[0.75rem] lg:left-4 w-4 h-4 lg:w-5 lg:h-5 flex justify-center items-center rounded-[50%] bg-[#3e688e] text-10 lg:text-12 text-fff leading-5 text-center;
 }
 .header_profile_icon {
   @apply lg:flex hidden cursor-pointer;
